# mcp-uuidv7-generator

./: .gitignore  README.md  pyproject.toml
mcp_uuid_server/: server.py
src/mcp_uuid_server/: server.py  uuid_core.py
